[package]
name = "solana-bpf-crowdsource"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.12"

[dev-dependencies]
solana-program-test = "=1.7.12"
solana-sdk = "=1.7.12"

[lib]
name = "crowdsource"
crate-type = ["cdylib", "lib"]
